<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/almostWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.JoinRoomFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="bottom|clip_horizontal"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconContentDescription="Room name"
            app:endIconDrawable="@drawable/room_icon"
            app:endIconMode="custom"
            app:endIconTint="@color/gray"
            app:hintTextColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:autofillHints="email"
                android:id="@+id/roomsJoin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/room_name_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/almostBlack"
                android:textColorHint="@color/almostBlack" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconTint="@color/gray"
            app:endIconContentDescription="Password"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:autofillHints="password"
                android:id="@+id/roomsJoin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/almostBlack"
                android:textColorHint="@color/almostBlack" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/roomsJoin_commitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/secondary_button"
            android:padding="2dp"
            android:text="@string/join_room_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>