<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/almostWhite">

        <!-- Linear layout base -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Campos de texto de los campos de texto-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@drawable/login_border"
                android:layout_gravity="center|center"
                android:padding="15dp">

                <TextView
                    android:id="@+id/auth_pageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center|center"
                    android:text="Login/Signup"
                    android:textColor="@color/purple_700"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/auth_nameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="bottom|clip_horizontal"
                    android:textColorHint="@color/gray"
                    android:visibility="visible"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:endIconContentDescription="Name"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/purple_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/auth_pageTitle">

                    <EditText
                        android:id="@+id/auth_nameTextbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="email"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:textColor="@color/almostBlack"
                        android:textColorHint="@color/almostBlack" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="bottom|clip_horizontal"
                    android:textColorHint="@color/gray"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:endIconContentDescription="@string/email_icon_description"
                    app:endIconDrawable="@drawable/person_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/purple_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/auth_nameContainer">

                    <EditText
                        android:id="@+id/auth_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/almostBlack"
                        android:textColorHint="@color/almostBlack" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/gray"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:endIconTint="@color/gray"
                    app:endIconContentDescription="@string/password_icon_description"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/purple_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <EditText
                        android:autofillHints="password"
                        android:id="@+id/auth_passwordTextbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/almostBlack"
                        android:textColorHint="@color/almostBlack" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/auth_loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/login_button"
                    android:padding="8dp"
                    android:text="Continue"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/auth_progressBackground"
                    android:visibility="gone"
                    android:elevation="4dp"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#B3FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/auth_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:visibility="visible"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:elevation="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Sign in-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:layout_gravity="center_vertical|center_horizontal">

                <CheckBox
                    android:id="@+id/auth_signupCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:text="@string/sign_in_text"
                    android:textColor="@color/purple_700"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/auth_dummyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:visibility="gone"
                    android:text="Dummy authentication"
                    android:textColor="@color/purple_700"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/auth_signupCheckBox" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>